--- a/meirambek/meiram.html
+++ b/meirambek/meiram.html
@@ -11,7 +11,7 @@
 <body>
     <div class = "wrapper">
         <div class="ava">
-            <img src="mei3.jfif" alt="my photo" width="150px" class="photo">
+            <img src="may2.jfif" alt="my photo" width="150px" class="photo">
         </div>
         <div class="obinfo">
             <h2>
@@ -23,9 +23,23 @@
                 График работы: Полный день<br>
                 Желаемая зарплата: 500 000 теңге<br>
                 Телефон: +7 (778) 793-46-93<br>
-                Электронная почта: meyrambek_khamitov@mail.ru
+                Электронная почта: meyrambek_khamitov@mail.ru<br>
+            </P>
+                <h2>Личная информация</h2>
+            <P class="uchebz">
+                Гражданство: Республика Казахстан<br>
+                Место проживания: г. Экибастуз<br>
+                Переезд: Возможен<br>
+                Образование: Высшее<br>
+                Дата рождения: 12 мая 2004 год (18 лет)<br>
+                Пол: Мужской<br>
+                Семейное положение: Не женат (Детей нет)<br>
 
             </P>   
+
+   
+
+
         </div>
         <div class="skill">
             <div class="mskills">
@@ -68,8 +82,11 @@
                 </p>
             </div>
             <div class="massage">
-                <img src="instagram-logo-bold-svgrepo-com.svg" alt="instagram" width="50px">
-                <h3>My instagram</h3>
+                <a class = "ssylca"href="https://instagram.com/khamitovm.17?igshid=YmMyMTA2M2Y=">
+                    <img src="instagram-logo-bold-svgrepo-com.svg" alt="instagram" width="50px">
+                </a>
+              
+                <a class = "ssylca"href="https://instagram.com/khamitovm.17?igshid=YmMyMTA2M2Y="><h3>My instagram:khamitovm.17</h3></a>
             </div>
         </div>
 
