--- a/day1/day1.html
+++ b/day1/day1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day1_ex1</title>
-    <link rel="stylesheet" href="day1.css"
+    <link rel="stylesheet" href="day1.css">
     <!-- focus -->
     <!-- curl --?url=https://clck.ru/32hXoQ -->
     <!-- url = 'https://clck.ru/32hXoQ' -->
